🔒 Security: Remove Firebase credentials and add to .gitignore
- Remove firebase-service-account.json from repository
- Add Firebase credentials to .gitignore
- Create firebase-service-account.json.example template
- Update README with security instructions

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ vendor/
 .env
 .env.local
 
+# Credenciales de Firebase (NUNCA subir al repositorio)
+firebase-service-account.json
+*-service-account.json
+firebase-adminsdk-*.json
+
 # Logs
 *.log
 
