--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,7 +55,7 @@ images:
 # Build options
 options:
   logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
+  # machineType: 'E2_HIGHCPU_8'
 
 # Timeout for the entire build
 timeout: '1200s'
