--- a/deploy/cloudrun-staging.yaml
+++ b/deploy/cloudrun-staging.yaml
@@ -28,12 +28,12 @@ spec:
           valueFrom:
             secretKeyRef:
               key: latest
-              name: jwt-secret-staging
+              name: it-chatbot-jwt-password
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
               key: latest
-              name: db-password-staging
+              name: it-chatbot-db-password
         - name: VAULT_TOKEN
           valueFrom:
             secretKeyRef:
