--- a/deploy/cloudrun-staging.yaml
+++ b/deploy/cloudrun-staging.yaml
@@ -16,7 +16,7 @@ spec:
       containerConcurrency: 100
       timeoutSeconds: 300
       containers:
-      - image: gcr.io/PROJECT_ID/it-auth-service:latest
+      - image: gcr.io/PROJECT_ID/it-auth-service:$COMMIT_SHA
         ports:
         - containerPort: 8080
         env:
