--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,8 +21,16 @@ steps:
     args:
       - '-c'
       - |
+        echo "Original file content:"
+        cat deploy/cloudrun-staging.yaml
+        echo "---"
+        
         # Replace PROJECT_ID and COMMIT_SHA placeholders in staging config
         sed -e 's/PROJECT_ID/$PROJECT_ID/g' -e 's/\$COMMIT_SHA/$COMMIT_SHA/g' deploy/cloudrun-staging.yaml > /tmp/cloudrun-staging.yaml
+        
+        echo "Generated file content:"
+        cat /tmp/cloudrun-staging.yaml
+        echo "---"
         
         # Deploy to Cloud Run
         gcloud run services replace /tmp/cloudrun-staging.yaml \
