--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,7 +29,7 @@ steps:
 
         # Deploy to Cloud Run
         gcloud run services replace /tmp/cloudrun-staging.yaml \
-          --region=us-east1 \
+          --region=us-central1 \
           --platform=managed \
           --allow-unauthenticated
 
@@ -46,7 +46,7 @@ steps:
           
           # Deploy to Cloud Run
           gcloud run services replace /tmp/cloudrun-production.yaml \
-            --region=us-east1 \
+            --region=us-central1 \
             --platform=managed \
             --allow-unauthenticated
         else
